--- a/index.html
+++ b/index.html
@@ -17,3 +17,13 @@ layout: main
 {% endfor %}
 
 {% include pagination.html %}
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PWVCWHXKL0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PWVCWHXKL0');
+</script>
